--- a/less/index.less
+++ b/less/index.less
@@ -20,7 +20,7 @@
                     width: 48%;
                     height: 80%;
                 }
-                p{
+                .right-of-photo-text{
                     display:flex;
                     flex-wrap: wrap;
                     width: 50%;
