--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-@media only screen and (max-width:749px) {
-  .background {
-    background-attachment: inherit;
-  }
-}
+
   
   @import url(https://fonts.googleapis.com/css?family=Montserrat);
 html, body {
@@ -183,3 +179,14 @@ text{
   border-radius: 10px;
 }
 
+@media only screen and (max-width:749px) {
+  .background {
+    background-attachment: inherit;
+    /* display: none; */
+    background-position: inherit;
+    transition: inherit;
+    /* position: inherit; */
+    /* background-size:  inherit; */
+    /* will-change: inherit; */
+  }
+}
