--- a/style.css
+++ b/style.css
@@ -181,11 +181,11 @@ text{
 
 @media only screen and (max-width:749px) {
   .background {
-    background-attachment: inherit;
+    /* background-attachment: inherit; */
     /* display: none; */
-    background-position: inherit;
-    transition: inherit;
-    /* position: inherit; */
+    /* background-position: inherit; */
+    /* transition: inherit; */
+    position: inherit;
     /* background-size:  inherit; */
     /* will-change: inherit; */
   }
