--- a/style.css
+++ b/style.css
@@ -178,9 +178,20 @@ text{
 .home .content-destination img {
   border-radius: 10px;
 }
-
+.mobile{
+  display:none;
+}
 @media only screen and (max-width:749px) {
   .background {
     display: none;
   }
+}
+
+@media only screen and (max-width:749px) {
+
+img{
+  display:flex;
+  border-radius: 50%;
+}
+
 }
