--- a/style.css
+++ b/style.css
@@ -181,13 +181,13 @@ text{
 .mobile{
   display:none;
 }
-@media only screen and (max-width:749px) {
+@media only screen and (min-width : 320px) and (max-width : 480px) {
   .background {
     display: none;
   }
 }
 
-@media only screen and (max-width:749px) {
+@media only screen and (min-width : 320px) and (max-width : 480px) {
 
 img{
   display:flex;
